--- a/app/src/main/res/layout/fragment_admin_add_employee.xml
+++ b/app/src/main/res/layout/fragment_admin_add_employee.xml
@@ -300,6 +300,33 @@
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/img"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/email"
+                        tools:ignore="MissingConstraints">
+
+                        <TextView
+                            style="@style/txt_heading_pro_detail"
+                            android:text="Photo : " />
+
+                        <Button
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/Emp_img"
+                            android:text="Select Image"
+                            android:textAlignment="center"
+                            android:textSize="20sp"
+                            android:background="@drawable/button_design"
+                            android:textColor="@color/white"/>
+
+                    </LinearLayout>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
