--- a/app/src/main/res/layout/fragment_admin_see_salary.xml
+++ b/app/src/main/res/layout/fragment_admin_see_salary.xml
@@ -1,176 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
     android:background="@color/background"
     tools:context=".admin_see_salary">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.03"
-        app:cardCornerRadius="20dp"
-        tools:ignore="MissingConstraints">
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <TableLayout
+            android:id="@+id/tablelayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/table_background"
+            android:stretchColumns="*">
 
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:stretchColumns="*">
+        </TableLayout>
 
-                <TableRow
-                    android:background="#E6E1E1">
+    </HorizontalScrollView>
 
-                    <TextView
-                        android:text="Sr No"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Employee Id"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Start Date"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="End Date"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Basic Pay"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Allowance"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Deduction"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Adjustment"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Total Amount"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Action"
-                        style="@style/txt_tbl_heading"/>
-
-                </TableRow>
-
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="1dp"
-                    android:background="#858383" />
-
-                <TableRow>
-
-                    <TextView
-                        android:text="1"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="21AFPL101"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="01 January-2024"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="31 January-2024"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 12000"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 400"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 200"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 100"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 12700"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="Paid"
-                        android:textColor="#5ED663"
-                        style="@style/txt_tbl_ans"/>
-
-                </TableRow>
-
-                <TableRow>
-
-                    <TextView
-                        android:text="2"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="21AFPL101"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="01 February-2024"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="29 February-2024"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 12000"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 400"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 200"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 100"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 12700"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="Paid"
-                        android:textColor="#5ED663"
-                        style="@style/txt_tbl_ans"/>
-
-                </TableRow>
-
-            </TableLayout>
-
-        </HorizontalScrollView>
-
-    </androidx.cardview.widget.CardView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
