--- a/app/src/main/res/layout/fragment_leave.xml
+++ b/app/src/main/res/layout/fragment_leave.xml
@@ -17,10 +17,13 @@
         tools:ignore="MissingConstraints" />
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="680dp"
+        android:id="@+id/viewpager"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tab_layout"
         tools:ignore="MissingConstraints" />
 
