--- a/app/src/main/res/layout/fragment_personal_detail.xml
+++ b/app/src/main/res/layout/fragment_personal_detail.xml
@@ -237,6 +237,27 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:id="@+id/img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/email"
+                    tools:ignore="MissingConstraints">
+
+                    <ImageView
+                        android:id="@+id/Emp_Img"
+                        android:layout_width="200dp"
+                        android:layout_height="300dp"
+                        android:scaleType="center"
+                        android:layout_margin="16dp" />
+
+                </LinearLayout>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </ScrollView>
